--- a/index.html
+++ b/index.html
@@ -13,44 +13,46 @@
   <body>
     <header>
       <nav>
-        <h1>Header nav h1</h1>
+        <h1>paw patrol</h1>
       </nav>
     </header>
-
-    <hr />
-
     <main>
       <section>
         <article>
-          <h2>WEB Semantica</h2>
-          <p>Usar los tags que son no todo div.</p>
-          <ul>
-            <li>ul li 1</li>
-            <ol>
-              <li>
-                <a href="https://es.wikipedia.org/wiki/Manzana">Manzanas</a>
-              </li>
-              <li>
-                <a
-                  href="https://es.wikipedia.org/wiki/Mango_(fruta)"
-                  target="_blank"
-                >
-                  Mangos
-                </a>
-              </li>
-            </ol>
-            <li>ul li 1</li>
-          </ul>
+          <h2>Formulario</h2>
+          <form action="">
+            <label for="name">
+              <span>What is your name?</span>
+              <input type="text" id="name" placeholder="Name" />
+            </label>
+            <label for="date">
+              <span>Date of birth?</span>
+              <input type="date" id="date" />
+            </label>
+            <label for="time">
+              <span>What time ?</span>
+              <input type="time" id="time" />
+            </label>
+            <label for="name">
+              <span>What is your name?</span>
+              <input type="text" id="name" />
+            </label>
+          </form>
         </article>
       </section>
       <section>
         <h2>Formulario</h2>
-        <form action="">
-          <label for="name">
-            <span>What is your name?</span>
-            <input type="text" id="name" />
-          </label>
-        </form>
+        <pre>
+          ..........／＞  フ
+          .........|  _  _ |
+          .......／` ミ＿xノ
+          ....../     |
+          ...../  ヽ   ﾉ
+          ....│  | | |
+          ／￣|   | | |
+          | (￣ヽ＿_ヽ_)__)
+          .＼二つ  
+        </pre>
       </section>
       <section>
         <h2>Paw patrol</h2>
