--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <section>
         <h2>Paw patrol</h2>
         <figure>
-          <img src="img/Rubble.png" alt="Rubble" width="270" height="250" />
+          <img src="img/Rubble.png" title="Rubble" alt="Rubble a paw patrol" width="270" height="250" />
           <figcaption>Es una imagen de un perrito</figcaption>
         </figure>
 
