add class super

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
       </nav>
     </header>
     <main>
+      <div class="super">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, facere
+          doloremque? Neque tenetur voluptatum laudantium, minus, ad harum, quod
+          assumenda commodi ipsa expedita nulla. Recusandae, eligendi? Maxime ab
+          neque culpa.
+        </p>
+      </div>
       <section>
         <article>
           <h2>Formulario</h2>
